# FreeCAD

./: README.md
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake
src/Mod/: CMakeLists.txt
src/Mod/Clipboard/: CMakeLists.txt  ClipboardGlobal.h  InitGui.py
src/Mod/Clipboard/Gui/: AppClipboardGui.cpp  CMakeLists.txt  ClipboardBase.h  Command.cpp  Workbench.cpp  Workbench.h
src/Mod/PartDesign/App/: FeatureHole.cpp  FeatureSketchBased.cpp  FeatureSketchBased.h
